--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <title>lista cognomi</title>
   </head>
   <body>
 
-    <ul id="output-cognomi">
+    <ul id="output-cognomi"></ul>
 
-    </ul>
+    <div id="output-index"></div>
 
     <script src="js/script.js" charset="utf-8"></script>
 
