--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
     <ul id="output-cognomi"></ul>
 
-    <div id="output-index"></div>
+    <button id="button" type="button" name="button">Clicca qui</button>
+
+    <div id="ciao">ciao </div>
 
     <script src="js/script.js" charset="utf-8"></script>
 
